--- a/website/templates/services.html
+++ b/website/templates/services.html
@@ -1,10 +1,15 @@
 <div class="container">
-    <div class="col-xxl-8 col-xl-12 pt-4">
-       
-        <div class="d-flex"><h2 class="">The Second Heading<h2 class="text-secondary mx-1">Is Pretty Cool Too.</h2></h2></div>
+    <div class="row bg-white my-auto aling-content-center">
+        <div class="col-xxl-3 col-xl-12 p-0">
+            <img src="assets/img/2.jpg" class="rounded-circle p-4 ms-5 float-xxl-end" alt="">
+        </div>
+        <div class="col-xxl-8 col-xl-12 pt-4">
+        
+            <div class="d-flex"><h2 class="">The Second Heading<h2 class="text-secondary mx-1">Is Pretty Cool Too.</h2></h2></div>
 
-      
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellendus debitis, quas accusamus repudiandae perferendis quis eius saepe perspiciatis optio molestias quod? Vitae aperiam architecto nobis ut beatae sit eveniet facere.</p>
-   
+        
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellendus debitis, quas accusamus repudiandae perferendis quis eius saepe perspiciatis optio molestias quod? Vitae aperiam architecto nobis ut beatae sit eveniet facere.</p>
+    
+        </div>
     </div>
 </div>
