algunos cambios para ajustar a menores resoluciones

--- a/website/templates/tagline.html
+++ b/website/templates/tagline.html
@@ -1,6 +1,6 @@
 <div class=" image  ">
 
-    <div class="row mx-2">
+    <div class="row mx-2 mw-100 d-block">
 
         <h1 class="h1 text-center mt-5 bg-white "> One Page Wonder</h1>
     </div>
