--- a/website/templates/first_heading.html
+++ b/website/templates/first_heading.html
@@ -1,16 +1,16 @@
 <!-- your html code here -->
 <div class="container border-top mt-5 mb-5 d-flex">
     <div class="mt-5 mb-5 d-flex ">   
-         <div class="float-start col-md-auto">
+         <div class="float-start">
             <div class="col align-self-start d-flex ">
                 <h2>The First Heading</h2><h2 class="text-secondary mx-1">Will Catch Your Eye</h2>
             </div>   
-            <div class="col10 d-flex">
+            <div class="col-8 m-0">
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellendus debitis, quas accusamus repudiandae perferendis quis eius saepe perspiciatis optio molestias quod? Vitae aperiam architecto nobis ut beatae sit eveniet facere.</p>
             </div>
          </div>
-            <div class ="float-end d-block col-md-auto">
-                 <img id=imgsize src="assets/img/1.jpg" class="rounded-circle m-0 p-0 px-5" alt="">
+            <div class ="float-end  d-block ">
+                 <img id=imgsize src="assets/img/1.jpg" class="rounded-circle col-md-12 p-0" alt="">
             </div>   
     </div>
 </div> 
