--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -20,7 +20,7 @@
                  
                 </div>
                 <div class="form-group d-flex pr-1 py-1">
-                    <div class="col-2"><p class="fw-bold">Your message</p></div>
+                    <div class="col-xxl-2"><p class="fw-bold">Your message</p></div>
                   <div class="col-8"><textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Please enter your message here..."></textarea></div>
                   
                 </div>
