--- a/website/templates/tagline.html
+++ b/website/templates/tagline.html
@@ -1,11 +1,13 @@
-<div class=" image  ">
+<div class=" image   ">
 
-    <div class="row mx-2 mw-100 d-block">
+    <div class="container-fluid p-0">
+        <div class="row m-0  w-100 d-block">
 
-        <h1 class="h1 text-center mt-5 bg-white "> One Page Wonder</h1>
-    </div>
-    <div class="row mx-2 ">
-        <h2 class="h2 text-center mt-3 bg-white py-2 "> Will Knock Your Socks Off </h2>
+            <h1 class="h1 text-center bg-white px-0"> One Page Wonder</h1>
+        </div>
+        <div class="row m-0  w-100 ">
+            <h2 class="h2 text-center mt-3 bg-white py-2 px-0 "> Will Knock Your Socks Off </h2>
+        </div>
     </div>
 
 </div>
