--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -11,7 +11,7 @@
     </div>
     <div class="row p-0 m-0">
         <div class="col-3"></div>
-        <div class="col-6 align-content-*-center bg-light">
+        <div class="col-6 p-3 align-content-*-center bg-light">
             <form>
                 <div class="form-group d-flex py-1">
                     <div class="col-2"><p class="fw-bold">Your E-mail</p></div>
