--- a/website/templates/footer.html
+++ b/website/templates/footer.html
@@ -1,7 +1,7 @@
 <footer>
     <div class="row">
-        <div class="col-lg-12">
-            <p>Copyright &copy; Your Website Name 2021</p>
+        <div class="bg-dark col-lg-12 d-flex justify-content-center align-items-center">
+            <p class="text-white my-2">Copyright &copy; Your Website Name 2021</p>
         </div>
     </div>
 </footer>
